[package]
name = "sw9s"
version = "0.1.0"
edition = "2021"
default-run = "sw9s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sw9s_lib"
path = "src/lib.rs"

[[bin]]
name = "sw9s"
path = "src/main.rs"

[features]
default = ["comms", "config", "missions", "video_source", "vision", "logging" ]
comms = []
config = []
missions = []
video_source = ["dep:opencv"]
vision = ["dep:opencv"]
logging = []
annotated_streams = ["logging"]


[dependencies]
opencv = { version = "0.94.2", default-features = false, features = ["dnn", "imgcodecs", "imgproc", "videoio", "cudaimgproc", "cudafilters"], optional = true } # Vision processing
tokio-serial = "5.4.1" # Async serial comms
tokio = { version = "1.38.0", features = ["full"] } # Async runtime
anyhow = "1.0.86" # Error handling
itertools = "0.13.0" # Enhance iterators
num-traits = "0.2.19" # Numeric generics
derive-getters = "0.4.0" # Getter macro
futures = { version = "0.3.30", default-features = false, features = ["std"] }# Futures utilities
toml = "0.8.14" # Configuration file
serde = { version = "1.0.203", features = ["derive"] } # Config serial handling
bytes = "1.6.0" # Byte buffering
uuid = { version = "1.9.0", features = ["v4", "fast-rng"] } # Unique IDs
chrono = "0.4.38" # Handling times
bluerobotics-ping = "0.3.5"
serde_json = "1.0.140"
tokio-util = { version = "0.7.15" }

[dev-dependencies]
rayon = "1.10.0"
